add and read product in cart
